--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@ Sacramento&display=swap" rel="stylesheet">
     <a class="footer-link" href="https://www.linkedin.com/">LinkedIn</a>
     <a class="footer-link" href="https://twitter.com/">Twitter</a>
     <a class="footer-link" href="https://www.appbrewery.co/">Website</a>
-    <p>© 2021 Ofek Gabriel Hasson.</p>
+    <p>© 2021 Ofek Gabriel Hasson</p>
   </div>
 
 </body>
